webkit appearance set to none to prevent google to interfere with css,must find gapps logo

--- a/g3.css
+++ b/g3.css
@@ -1,3 +1,6 @@
+webkit{
+ appearance:none;   
+}    
 body{
     background-color:rgb(234,231,225);
 }
